--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
@@ -17,13 +17,15 @@
 
     <LinearLayout
         android:orientation="horizontal"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:layout_weight="0"
         android:background="@color/colorAlLightGrey"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
         android:id="@+id/linearLayout">
 
         <TextView
@@ -47,11 +49,10 @@
            />
     </LinearLayout>
 
-    <LinearLayout
-        android:orientation="vertical"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="4"
+        android:layout_height="300dp"
+        android:layout_centerVertical="true"
         android:background="@color/colorAlLightBlue"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
@@ -59,9 +60,13 @@
 
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
             android:text="@string/no_tandas_message"
             android:textAppearance="?android:textAppearanceLarge"
             android:textStyle="bold"
@@ -70,8 +75,9 @@
 
         <Button
             android:layout_width="120dp"
-            android:layout_height="0dp"
-            android:layout_weight="2"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_height="wrap_content"
             android:background="@color/colorAlOrange"
             android:text="@string/creat_tanda"
             android:id="@+id/button"
@@ -82,33 +88,34 @@
             android:layout_gravity="center_horizontal" />
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
             android:text="@string/splash_screen_lema"
             android:textAppearance="?android:textAppearanceLarge"
             android:textStyle="bold"
-            android:textAlignment="center"
+            android:layout_centerHorizontal="true"
             android:layout_marginTop="10sp"
             android:layout_gravity="center_horizontal"
             android:textColor="@color/colorAlBlue"/>
 
 
-    </LinearLayout>
+    </RelativeLayout>
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:layout_marginBottom="10sp"
+        android:layout_marginBottom="30sp"
         android:text="Tienes dudas?"
         android:textAppearance="?android:textAppearanceMedium"
         android:textStyle="bold"
         android:textColor="@color/colorAlBlue"
         />
 
-</LinearLayout>
+</RelativeLayout>
