--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -26,7 +26,7 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
-        android:id="@+id/linearLayout">
+        android:id="@+id/linearLayout_welcome">
 
         <TextView
             android:layout_width="wrap_content"
@@ -35,6 +35,7 @@
             android:textAppearance="?android:textAppearanceMedium"
             android:textStyle="bold"
             android:textColor="@color/colorAlBlue"
+            android:id="@+id/TextView_welcome"
             />
 
         <ImageView
@@ -44,26 +45,28 @@
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:scaleType="fitCenter"
-
-            android:id="@+id/imageView2"
+            android:id="@+id/imageView_welcome"
            />
     </LinearLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:layout_centerVertical="true"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/linearLayout_welcome"
         android:background="@color/colorAlLightBlue"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin">
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:id="@+id/RelativeLayout_create_new_tanda">
 
 
         <TextView
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
-            android:layout_width="wrap_content"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
@@ -71,32 +74,34 @@
             android:textAppearance="?android:textAppearanceLarge"
             android:textStyle="bold"
             android:textColor="@color/colorAlBlue"
+            android:id="@+id/textView_aun_no"
             />
 
         <Button
             android:layout_width="120dp"
+            android:layout_below="@id/textView_aun_no"
             android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
             android:layout_height="wrap_content"
             android:background="@color/colorAlOrange"
             android:text="@string/creat_tanda"
-            android:id="@+id/button"
+            android:id="@+id/button_new_tanda"
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
-            android:layout_gravity="center_horizontal" />
+            />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
+            android:layout_below="@id/button_new_tanda"
             android:text="@string/splash_screen_lema"
             android:textAppearance="?android:textAppearanceLarge"
             android:textStyle="bold"
             android:layout_centerHorizontal="true"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
             android:layout_marginTop="10sp"
-            android:layout_gravity="center_horizontal"
             android:textColor="@color/colorAlBlue"/>
 
 
@@ -107,11 +112,11 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@id/RelativeLayout_create_new_tanda"
         android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:layout_marginBottom="30sp"
         android:text="Tienes dudas?"
         android:textAppearance="?android:textAppearanceMedium"
         android:textStyle="bold"
