--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -1,9 +1,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <gradient
+    android:shape="rectangle"
+    android:tint="@color/colorAlOrange">
+
+    <!--<gradient
         android:angle="135"
         android:centerColor="@color/colorAlOrange"
         android:endColor="@color/colorAlLightBlue"
         android:startColor="@color/colorAlBlue"
-        android:type="linear" />
+        android:type="linear" /> -->
 </shape>
