--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
@@ -15,24 +15,20 @@
     tools:showIn="@layout/app_bar_main">
 
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:background="@color/colorAlLightGrey"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
         android:id="@+id/linearLayout_welcome">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="@string/splash_screen_welcome"
-            android:textAppearance="?android:textAppearanceMedium"
+            android:textAppearance="?android:textAppearanceSmall"
             android:textStyle="bold"
             android:textColor="@color/colorAlBlue"
             android:id="@+id/TextView_welcome"
@@ -40,19 +36,20 @@
 
         <ImageView
             android:src="@drawable/al_mainlogo"
+            android:layout_toRightOf="@id/TextView_welcome"
+            android:layout_toEndOf="@id/TextView_welcome"
             android:contentDescription="@string/app_name"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:scaleType="fitCenter"
             android:id="@+id/imageView_welcome"
            />
-    </LinearLayout>
+    </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/linearLayout_welcome"
+        android:layout_height="0dp"
+        android:layout_weight="4"
         android:background="@color/colorAlLightBlue"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
@@ -64,10 +61,9 @@
         <TextView
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin"
-            android:paddingBottom="@dimen/activity_vertical_margin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:text="@string/no_tandas_message"
@@ -75,6 +71,8 @@
             android:textStyle="bold"
             android:textColor="@color/colorAlBlue"
             android:id="@+id/textView_aun_no"
+            android:paddingTop="@dimen/text_padding"
+            android:paddingBottom="@dimen/text_padding"
             />
 
         <Button
@@ -85,22 +83,19 @@
             android:background="@color/colorAlOrange"
             android:text="@string/creat_tanda"
             android:id="@+id/button_new_tanda"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin"
+            android:paddingTop="@dimen/text_padding"
+            android:paddingBottom="@dimen/text_padding"
+
             />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/button_new_tanda"
+            android:layout_alignParentBottom="true"
             android:text="@string/splash_screen_lema"
             android:textAppearance="?android:textAppearanceLarge"
             android:textStyle="bold"
             android:layout_centerHorizontal="true"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingTop="@dimen/activity_vertical_margin"
             android:layout_marginTop="10sp"
             android:textColor="@color/colorAlBlue"/>
 
@@ -109,12 +104,9 @@
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/RelativeLayout_create_new_tanda"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:text="Tienes dudas?"
@@ -123,4 +115,4 @@
         android:textColor="@color/colorAlBlue"
         />
 
-</RelativeLayout>
+</LinearLayout>
