--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,7 +5,22 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+
     <dimen name="text_padding">8dp</dimen>
 
-    <dimen name="fab_margin">16dp</dimen>
+
+    <dimen name="TC_height">98dp</dimen>
+    <dimen name="TC_height_line">100dp</dimen>
+
+    <dimen name="TC_status_width">58dp</dimen>
+    <dimen name="TC_status_ic_height">40dp</dimen>
+    <dimen name="TC_action_width">70dp</dimen>
+    <dimen name="TC_details_width">20dp</dimen>
+    <dimen name="TC_details_arrow_height">20dp</dimen>
+
+
+    <dimen name="TC_message_name_height">36dp</dimen>
+
+
 </resources>
