--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,9 @@
     <color name="colorAlLightBlue">#A3B0C1</color>
     <color name="colorAlLightGrey">#E9ECF1</color>
     <color name="colorAlDarkGrey">#868686</color>
+    <color name="colorAlWhite">#FFFFFF</color>
+    <color name="colorTandaCardLine">@color/colorAlLightGrey</color>
+    <color name="colorTandaCardBackground">@color/colorAlWhite</color>
+
 
 </resources>
