--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,17 +10,17 @@
     <dimen name="text_padding">8dp</dimen>
 
 
-    <dimen name="TC_height">98dp</dimen>
-    <dimen name="TC_height_line">100dp</dimen>
+    <dimen name="TC_height">100dp</dimen>
+    <dimen name="TC_height_line">2dp</dimen>
 
-    <dimen name="TC_status_width">58dp</dimen>
+    <dimen name="TC_status_width">55dp</dimen>
     <dimen name="TC_status_ic_height">40dp</dimen>
-    <dimen name="TC_action_width">70dp</dimen>
+    <dimen name="TC_action_width">68dp</dimen>
     <dimen name="TC_details_width">20dp</dimen>
     <dimen name="TC_details_arrow_height">20dp</dimen>
 
 
-    <dimen name="TC_message_name_height">36dp</dimen>
+    <dimen name="TC_message_name_height">wrap_content</dimen>
 
 
 </resources>
