--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -24,13 +24,18 @@
                 android:icon="@drawable/ic_call_24dp"
                 android:title="@string/tel" />
             <item
+                android:id="@+id/nav_sms"
+                android:icon="@drawable/ic_sms_24dp"
+                android:title="@string/sms" />
+            <item
                 android:id="@+id/nav_email"
                 android:icon="@drawable/ic_email_24dp"
                 android:title="@string/email" />
             <item
                 android:id="@+id/nav_chat"
                 android:icon="@drawable/ic_chat_24dp"
-                android:title="@string/chat" />
+                android:title="@string/chat"
+                />
 
 
         </menu>
