--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -5,7 +5,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorAlLightGrey"
+        android:background="@color/colorAlWhite"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
@@ -19,7 +19,6 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:background="@color/colorAlLightGrey"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:id="@+id/linearLayout_welcome">
@@ -46,11 +45,10 @@
                />
         </RelativeLayout>
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="4"
-            android:background="@color/colorAlLightBlue"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
@@ -63,9 +61,7 @@
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true"
+                android:layout_gravity="center"
                 android:text="@string/no_tandas_message"
                 android:textAppearance="?android:textAppearanceLarge"
                 android:textStyle="bold"
@@ -76,31 +72,26 @@
                 />
 
             <Button
-                android:layout_width="120dp"
-                android:layout_below="@id/textView_aun_no"
-                android:layout_centerHorizontal="true"
+                android:layout_width="wrap_content"
+                android:maxLines="2"
+                android:minLines="1"
+                android:layout_gravity="center"
                 android:layout_height="wrap_content"
-                android:background="@color/colorAlOrange"
+                android:background="@drawable/buttonshape"
+                android:textAppearance="?android:textAppearanceLarge"
                 android:text="@string/creat_tanda"
                 android:id="@+id/button_new_tanda"
                 android:paddingTop="@dimen/text_padding"
                 android:paddingBottom="@dimen/text_padding"
+                android:layout_margin="@dimen/fab_margin"
+                android:textColor="@color/colorAlWhite"
 
                 />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:text="@string/splash_screen_lema"
-                android:textAppearance="?android:textAppearanceLarge"
-                android:textStyle="bold"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="10sp"
-                android:textColor="@color/colorAlBlue"/>
 
 
-        </RelativeLayout>
+
+        </LinearLayout>
 
         <TextView
             android:layout_width="wrap_content"
