--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,105 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/colorAlWhite"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context="com.ahorrolibre.al01.MainActivity"
-        tools:showIn="@layout/app_bar_main">
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:orientation="horizontal"
-            android:id="@+id/linearLayout_welcome">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="@string/splash_screen_welcome"
-                android:textAppearance="?android:textAppearanceSmall"
-                android:textStyle="bold"
-                android:textColor="@color/colorAlBlue"
-                android:paddingRight="@dimen/text_padding"
-                android:id="@+id/TextView_welcome"
-                />
-
-            <ImageView
-                android:src="@drawable/al_mainlogo"
-                android:contentDescription="@string/app_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:scaleType="fitCenter"
-                android:id="@+id/imageView_welcome"
-               />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:id="@+id/RelativeLayout_create_new_tanda">
-
-
-            <TextView
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/no_tandas_message"
-                android:textAppearance="?android:textAppearanceLarge"
-                android:textStyle="bold"
-                android:textColor="@color/colorAlBlue"
-                android:id="@+id/textView_aun_no"
-                android:paddingTop="@dimen/text_padding"
-                android:paddingBottom="@dimen/text_padding"
-                />
-
-            <Button
-                android:layout_width="wrap_content"
-                android:maxLines="2"
-                android:minLines="1"
-                android:layout_gravity="center"
-                android:layout_height="wrap_content"
-                android:background="@drawable/buttonshape"
-                android:textAppearance="?android:textAppearanceLarge"
-                android:text="@string/creat_tanda"
-                android:id="@+id/button_new_tanda"
-                android:padding="@dimen/text_padding"
-                android:layout_margin="@dimen/fab_margin"
-                android:textColor="@color/colorAlWhite"
-
-                />
-
-
-
-
-        </LinearLayout>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:text="Tienes dudas?"
-            android:textAppearance="?android:textAppearanceMedium"
-            android:textStyle="bold"
-            android:textColor="@color/colorAlBlue"
-            />
-
-    </LinearLayout>
+<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment"
+    android:name="com.ahorrolibre.al01.MainActivityFragment"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:layout="@layout/fragment_main"
+    tools:showIn="@layout/app_bar_main"
+    />
+    <!--tools:context="com.ahorrolibre.al01.MainActivity"-->
