Passing string from JSON now into detail activity, so when you click on a list item you can see the name of the tanda on top

--- a/app/src/main/res/layout/fragment_tanda_detail.xml
+++ b/app/src/main/res/layout/fragment_tanda_detail.xml
@@ -12,6 +12,7 @@
 
         <TextView
             android:text="Hello"
+            android:id="@+id/tanda_detail_text"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
