--- a/app/src/main/res/layout/activity_tanda_detail.xml
+++ b/app/src/main/res/layout/activity_tanda_detail.xml
@@ -31,6 +31,8 @@
 
     </android.support.design.widget.AppBarLayout>
 
+    <!--<include layout="@layout/fragment_tanda_detail"/>-->
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
